--- a/game.html
+++ b/game.html
@@ -17,11 +17,10 @@
     <link rel="stylesheet" href="./styles/game.css">
     <link rel="stylesheet" href="./styles/style.css">
 
-
+    <script src="./js/sprites.js"></script>
     <script src="./models/objects-drawable.class.js"></script>
     <script src="./models/objects-moveable.class.js"></script>
     <script src="./models/objects-background.class.js"></script>
-
     <script src="./models/character.class.js"></script>
     <script src="./models/enemy-candle.class.js"></script>
     <script src="./models/enemy-endboss.class.js"></script>
@@ -30,14 +29,11 @@
     <script src="./models/enemy-spinner.class.js"></script>
     <script src="./models/enemy-spirit.class.js"></script>
     <script src="./models/enemy-squid.class.js"></script>
-
     <script src="./models/world.class.js"></script>
-
     <script src="./models/objects-throwable.class.js"></script>
     <script src="./models/objects-health.class.js"></script>
     <script src="./models/objects-bomb.class.js"></script>
     <script src="./models/objects-throwError.class.js"></script>
-
     <script src="./models/keyboard.class.js"></script>
     <script src="./models/level.class.js"></script>
     <script src="./levels/level-01.js"></script>
