--- a/game.html
+++ b/game.html
@@ -22,6 +22,7 @@
     <script src="./models/objects-moveable.class.js"></script>
     <script src="./models/objects-background.class.js"></script>
     <script src="./models/character.class.js"></script>
+    <script src="./models/enemy-base.class.js"></script>
     <script src="./models/enemy-candle.class.js"></script>
     <script src="./models/enemy-endboss.class.js"></script>
     <script src="./models/enemy-plant.class.js"></script>
