--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" translate="no">
 
 <head>
     <meta charset="UTF-8">
@@ -153,9 +153,6 @@
                                 </div>
                                 <div class="kbd-control-row">
                                     <kbd>W</kbd> - <span>Use the W key to make the character jump.</span>
-                                </div>
-                                <div class="kbd-control-row">
-                                    <kbd>␣</kbd> - <span>Use the space-bar to make the character jump.</span>
                                 </div>
                             </div>
                         </div>
