--- a/legal-notice.html
+++ b/legal-notice.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" translate="no">
 
 <head>
     <meta charset="UTF-8">
@@ -64,7 +64,7 @@
 
                 <section>
                     <h2>Contact Information</h2>
-                    <div class="article-section">
+                    <div class="contact-section">
                         <p>First Name, Last Name</p>
                         <p>Street</p>
                         <p>Post Code</p>
@@ -77,21 +77,23 @@
                     <h2>Disclaimer</h2>
                     <div class="article-section">
                         <p>
-                            Accountability for content
-                            The contents of our pages have been created with the utmost care. However, we cannot guarantee the contents' accuracy, completeness or topicality.
-                            According to statutory provisions, we are furthermore responsible for our own content on these web pages. In this matter, please note that we are not
-                            obliged to monitor the transmitted or saved information of third parties, or investigate circumstances pointing to illegal activity. Our obligations to
-                            remove or block the use of information under generally applicable laws remain unaffected by this as per §§ 8 to 10 of the Telemedia Act (TMG).
+                            Accountability for content:
+                            The content of this website has been created with great care. However, no guarantee is provided for its accuracy, completeness, or timeliness. As per §
+                            7 Para. 1 of the German Telemedia Act (DDG), service providers are responsible for their own content on this website. However, §§ 8–10 DDG state that
+                            service providers are not obligated to monitor third-party information or investigate potential illegal activity. Liability is only possible from the
+                            time of awareness of a specific violation. Such content will be removed promptly upon notice of legal violations.
                         </p>
                     </div>
                 </section>
 
                 <section>
-                    <h2>Accountability for links</h2>
+                    <h2>Accountability for Links</h2>
                     <div class="article-section">
                         <p>
-                            Responsibility for the content of external links (to web pages of third parties) lies solely with the operators of the linked pages. No violations were
-                            evident to us at the time of linking. Should any legal infringement become known to us, we will remove the respective link immediately.
+                            This website may include links to external third-party websites, over whose content we have no control. Therefore, no liability is assumed for such
+                            content. Responsibility lies with the respective provider or operator. Linked pages were checked for legal violations at the time of linking, and no
+                            illegal content was identified. Continuous monitoring of linked pages without concrete evidence is unreasonable. Upon notice of violations, such links
+                            will be removed promptly.
                         </p>
                     </div>
                 </section>
@@ -100,17 +102,36 @@
                     <h2>Copyright</h2>
                     <div class="article-section">
                         <p>
-                            Our web pages and their contents are subject to German copyright law. Unless expressly permitted by law, every form of utilizing, reproducing or
-                            processing works subject to copyright protection on our web pages requires the prior consent of the respective owner of the rights. Individual
-                            reproductions of a work are only allowed for private use. The materials from these pages are copyrighted and any unauthorized use may violate copyright
-                            laws.
+                            The content and works created on this website are subject to German copyright law. Reproduction, editing, distribution, and any use beyond the limits of
+                            copyright require the written consent of the respective author or creator. Downloads and copies of this website are permitted only for private,
+                            non-commercial use. Where the content on this website was not created by the operator, third-party copyrights are respected.
+                        </p>
+                    </div>
+                </section>
+
+                <section>
+                    <h2>Sources and Attributions</h2>
+                    <div class="article-section">
+                        <p>
+                            This website uses external content from third-party sources, including but not limited to:
+                        </p>
+                        <ul>
+                            <li><a href="https://bevouliin.com/">Bevoulii</a></li>
+                            <li><a href="https://phosphoricons.com/">Phosphor Icons</a></li>
+                            <li><a href="https://freesound.org/">Freesound</a></li>
+                            <li><a href="https://heropatterns.com/">Hero Patterns</a></li>
+                        </ul>
+                        <p>
+                            All external content is used in compliance with copyright and licensing terms. If you have any concerns regarding third-party content on this website,
+                            please contact us. Upon notification of any legal violations, such content will be removed immediately.
+                        </p>
+                        <p>
+                            For further details on the assets used, including licenses and attributions, please refer to the individual <code>README.md</code> files located within the
+                            respective subfolders of the asset directory in the repository on <a href="https://github.com/robsc0de/brizzle-bash/tree/main">GitHub</a>.
                         </p>
                     </div>
                 </section>
             </div>
-
-
-
         </article>
     </div>
 
