--- a/legal-notice.html
+++ b/legal-notice.html
@@ -18,24 +18,9 @@
     <link rel="stylesheet" href="./styles/style.css">
 </head>
 
-<body>
+<body onload="initPageContent()">
 
-    <header>
-        <div class="header-inner">
-            <a href="./index.html" class="main-logo">
-                <img class="logo-img" src="./assets/img/main/logo.png" alt="Logo">
-                <span>Brizzle Bash</span>
-            </a>
-            <a href="https://github.com/robsc0de/brizzle-bash" target="_blank" rel="noopener noreferrer" class="external-link">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-                    <path
-                        d="M12.026 2c-5.509 0-9.974 4.465-9.974 9.974 0 4.406 2.857 8.145 6.821 9.465.499.09.679-.217.679-.481 0-.237-.008-.865-.011-1.696-2.775.602-3.361-1.338-3.361-1.338-.452-1.152-1.107-1.459-1.107-1.459-.905-.619.069-.605.069-.605 1.002.07 1.527 1.028 1.527 1.028.89 1.524 2.336 1.084 2.902.829.091-.645.351-1.085.635-1.334-2.214-.251-4.542-1.107-4.542-4.93 0-1.087.389-1.979 1.024-2.675-.101-.253-.446-1.268.099-2.64 0 0 .837-.269 2.742 1.021a9.582 9.582 0 0 1 2.496-.336 9.554 9.554 0 0 1 2.496.336c1.906-1.291 2.742-1.021 2.742-1.021.545 1.372.203 2.387.099 2.64.64.696 1.024 1.587 1.024 2.675 0 3.833-2.33 4.675-4.552 4.922.355.308.675.916.675 1.846 0 1.334-.012 2.41-.012 2.737 0 .267.178.577.687.479C19.146 20.115 22 16.379 22 11.974 22 6.465 17.535 2 12.026 2z">
-                    </path>
-                </svg>
-                <span>View on GitHub</span>
-            </a>
-        </div>
-    </header>
+    <header id="header-content"></header>
 
     <div class="article-wrapper fade-in">
         <article>
@@ -125,8 +110,8 @@
                             please contact us. Upon notification of any legal violations, such content will be removed immediately.
                         </p>
                         <p>
-                            For further details on the assets used, including licenses and attributions, please refer to the individual <code>README.md</code> files located within the
-                            respective subfolders of the asset directory in the repository on <a href="https://github.com/robsc0de/brizzle-bash/tree/main">GitHub</a>.
+                            For further details on the assets used, including licenses and attributions, please refer to the individual <code>README.md</code> files located within
+                            the respective subfolders of the asset directory in the repository on <a href="https://github.com/robsc0de/brizzle-bash/tree/main">GitHub</a>.
                         </p>
                     </div>
                 </section>
@@ -134,44 +119,12 @@
         </article>
     </div>
 
+    <footer id="footer-content"></footer>
 
-    <footer>
-        <div class="footer-inner">
-            <div class="footer-main">
-                <div class="footer-logo-wrapper">
-                    <img class="footer-logo" src="./assets/img/main/logo.png" alt="Logo">
-                    <span class="footer-logo-txt">Brizzle Bash</span>
-                </div>
-            </div>
-            <div class="footer-links">
-                <a href="./legal-notice.html">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="none" viewBox="0 0 256 256">
-                        <path
-                            d="M213.66,82.34l-56-56A8,8,0,0,0,152,24H56A16,16,0,0,0,40,40V216a16,16,0,0,0,16,16H200a16,16,0,0,0,16-16V88A8,8,0,0,0,213.66,82.34ZM160,51.31,188.69,80H160ZM200,216H56V40h88V88a8,8,0,0,0,8,8h48V216Zm-32-80a8,8,0,0,1-8,8H96a8,8,0,0,1,0-16h64A8,8,0,0,1,168,136Zm0,32a8,8,0,0,1-8,8H96a8,8,0,0,1,0-16h64A8,8,0,0,1,168,168Z">
-                        </path>
-                    </svg>
-                    Legal Notice
-                </a>
-                <a href="https://github.com/robsc0de/brizzle-bash" target="_blank" rel="noopener noreferrer">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-                        <path
-                            d="M12.026 2c-5.509 0-9.974 4.465-9.974 9.974 0 4.406 2.857 8.145 6.821 9.465.499.09.679-.217.679-.481 0-.237-.008-.865-.011-1.696-2.775.602-3.361-1.338-3.361-1.338-.452-1.152-1.107-1.459-1.107-1.459-.905-.619.069-.605.069-.605 1.002.07 1.527 1.028 1.527 1.028.89 1.524 2.336 1.084 2.902.829.091-.645.351-1.085.635-1.334-2.214-.251-4.542-1.107-4.542-4.93 0-1.087.389-1.979 1.024-2.675-.101-.253-.446-1.268.099-2.64 0 0 .837-.269 2.742 1.021a9.582 9.582 0 0 1 2.496-.336 9.554 9.554 0 0 1 2.496.336c1.906-1.291 2.742-1.021 2.742-1.021.545 1.372.203 2.387.099 2.64.64.696 1.024 1.587 1.024 2.675 0 3.833-2.33 4.675-4.552 4.922.355.308.675.916.675 1.846 0 1.334-.012 2.41-.012 2.737 0 .267.178.577.687.479C19.146 20.115 22 16.379 22 11.974 22 6.465 17.535 2 12.026 2z">
-                        </path>
-                    </svg>
-                    View on GitHub
-                </a>
-            </div>
-            <figcaption class="made-with-section">
-                <span>made with</span>
-                <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="none" viewBox="0 0 256 256">
-                    <path
-                        d="M240,102c0,70-103.79,126.66-108.21,129a8,8,0,0,1-7.58,0C119.79,228.66,16,172,16,102A62.07,62.07,0,0,1,78,40c20.65,0,38.73,8.88,50,23.89C139.27,48.88,157.35,40,178,40A62.07,62.07,0,0,1,240,102Z">
-                    </path>
-                </svg>
-                <span>R.G.</span>
-            </figcaption>
-        </div>
-    </footer>
+
+
+    <script src="./js/templates.js"></script>
+    <script src="./js/rendering.js"></script>
 
 </body>
 
