optimized sound control and UI synchronization
Update includes:
- improved handling of checkbox clicks for sound toggle;
- set audio to be muted by default and sync UI states;
- disabled pause button when game over screen is active;

--- a/game.html
+++ b/game.html
@@ -118,13 +118,13 @@
                         </svg>
                     </button>
                 </div>
-                <button id="toggle-pause-btn" class="btn" onclick="toggleGamePause()">
-                    <svg id="pause-btn-icon" xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="none" viewBox="0 0 256 256">
+                <button id="btn-toggle-pause" class="btn" onclick="toggleGamePause()">
+                    <svg id="btn-pause-icon" xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="none" viewBox="0 0 256 256">
                         <path
                             d="M128,24A104,104,0,1,0,232,128,104.11,104.11,0,0,0,128,24Zm0,192a88,88,0,1,1,88-88A88.1,88.1,0,0,1,128,216ZM112,96v64a8,8,0,0,1-16,0V96a8,8,0,0,1,16,0Zm48,0v64a8,8,0,0,1-16,0V96a8,8,0,0,1,16,0Z">
                         </path>
                     </svg>
-                    <span id="pause-btn-text">Break</span>
+                    <span id="btn-pause-text">Break</span>
                 </button>
                 <div class="action-buttons hidden">
                     <div class="action-buttons-top">
@@ -146,6 +146,7 @@
             <div id="game-over-screen" class="game-over-screen hidden"></div>
             <div id="game-settings-modal" class="modal hidden"></div>
             <div id="info-guide-modal" class="modal hidden"></div>
+
         </div>
     </main>
 
