update loader transition

--- a/game.html
+++ b/game.html
@@ -44,6 +44,14 @@
 
 <body onload="initPageContent(); initGame();">
 
+    <div id="loader-screen" class="loader-screen">
+        <div class="loader-content fade-in">
+            <div class="loader"></div>
+            <div class="blur"></div>
+            <h3>Loading</h3>
+        </div>
+    </div>
+
     <header id="header-content" class="hidden"></header>
 
     <main class="hidden">
@@ -149,8 +157,6 @@
 
         </div>
     </main>
-
-    <div id="loader-screen" class="loader-screen"></div>
 
     <div id="landscape-modal" class="landscape-modal hidden"></div>
 
