updated legal notice page
update includes:
- refactored html,
- optimized css,
- optimized asset css classes

--- a/legal-notice.html
+++ b/legal-notice.html
@@ -22,30 +22,28 @@
 
     <header id="header-content"></header>
 
-    <div class="article-wrapper fade-in">
-        <article>
-            <div class="article-header">
-                <h1 class="article-headline">Legal Notice</h1>
-                <a href="./index.html">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="none" viewBox="0 0 256 256">
-                        <path
-                            d="M224,128a8,8,0,0,1-8,8H59.31l58.35,58.34a8,8,0,0,1-11.32,11.32l-72-72a8,8,0,0,1,0-11.32l72-72a8,8,0,0,1,11.32,11.32L59.31,120H216A8,8,0,0,1,224,128Z">
-                        </path>
-                    </svg>
-                    Back to Home
-                </a>
+    <section class="legal-notice-wrapper fade-in">
+        <div class="legal-notice-wrapper-inner">
+            <div class="hero-section">
+                <div class="blur"></div>
+                <div class="article-header">
+                    <h1 class="article-headline">Legal Notice</h1>
+                    <a href="./index.html" class="internal-link">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="none" viewBox="0 0 256 256">
+                            <path
+                                d="M224,128a8,8,0,0,1-8,8H59.31l58.35,58.34a8,8,0,0,1-11.32,11.32l-72-72a8,8,0,0,1,0-11.32l72-72a8,8,0,0,1,11.32,11.32L59.31,120H216A8,8,0,0,1,224,128Z">
+                            </path>
+                        </svg>
+                        Back to Home
+                    </a>
+                </div>
             </div>
-
             <hr>
-
-            <div class="article-main">
+            <article>
                 <section>
                     <h2>Legal Disclosure</h2>
-                    <div class="article-section">
-                        <p>Information in accordance with § 5 DDG.</p>
-                    </div>
+                    <p>Information in accordance with § 5 DDG.</p>
                 </section>
-
                 <section>
                     <h2>Contact Information</h2>
                     <div class="contact-section">
@@ -56,7 +54,6 @@
                         <p>Mail</p>
                     </div>
                 </section>
-
                 <section>
                     <h2>Disclaimer</h2>
                     <div class="article-section">
@@ -69,7 +66,6 @@
                         </p>
                     </div>
                 </section>
-
                 <section>
                     <h2>Accountability for Links</h2>
                     <div class="article-section">
@@ -81,7 +77,6 @@
                         </p>
                     </div>
                 </section>
-
                 <section>
                     <h2>Copyright</h2>
                     <div class="article-section">
@@ -92,7 +87,6 @@
                         </p>
                     </div>
                 </section>
-
                 <section>
                     <h2>Sources and Attributions</h2>
                     <div class="article-section">
@@ -115,9 +109,9 @@
                         </p>
                     </div>
                 </section>
-            </div>
-        </article>
-    </div>
+            </article>
+        </div>
+    </section>
 
     <footer id="footer-content"></footer>
 
